# vtable_gen

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  parse.rs  util.rs
src/class/: base_access.rs  bridge.rs  extractor.rs  gen_vtable.rs  generic_base.rs  imp.rs  mod.rs  secondary_base.rs  stct.rs  trt.rs  vtable.rs
tests/: basic.rs  cross_module.rs  generic.rs  generic_base.rs  generic_base_inheritance.rs  generic_multi_parent.rs  generic_multi_parent_multi_layer.rs  generic_single_parent.rs  generic_single_parent_multi_layer.rs  multi_parent.rs  multi_parent_multi_layer.rs  no_impl.rs  single_multi_layer.rs  single_parent.rs  single_parent_multi_layer.rs  tests.rs
tests/cross/: mod.rs
vtable_util/: Cargo.toml
vtable_util/src/: args.rs  dependency_tree.rs  main.rs  util.rs
