[package]
name = "vtable_gen"
authors = ["Andrew Buck"]
description = "A C++-ABI VTable Generator for Rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MrElectrify/vtable_gen"
keywords = ["vtable", "gen"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }