[package]
name = "vtable_gen"
authors = ["Andrew Buck"]
description = "A C++-ABI VTable Generator for Rust"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MrElectrify/vtable_gen"
keywords = ["vtable", "gen"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
darling = "0.20"
itertools = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
